web-ui v0.7.11 styleguide

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 		<meta charset="utf-8">
 		<title>Speck Agency Web Ui Style Guide</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="/build/css/default.css">
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 	</head>
 	<body>
 		<div id="app"></div>
-	<script type="text/javascript" src="build/bundle.2c6d69fb.js"></script></body>
+	<script type="text/javascript" src="build/bundle.1f467a9f.js"></script></body>
 </html>
+
