web-ui v0.7.12 styleguide

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 	</head>
 	<body>
 		<div id="app"></div>
-	<script type="text/javascript" src="build/bundle.1f467a9f.js"></script></body>
+	<script type="text/javascript" src="build/bundle.1f467a9f.js"></script><script type="text/javascript" src="build/bundle.02970877.js"></script></body>
 </html>
 
